cmake_minimum_required(VERSION 3.23)
project(algoritmi_fundamentali)

set(CMAKE_CXX_STANDARD 23)

add_executable(algoritmi_fundamentali main.cpp tema_1/main2.cpp tema_1/Besliu_Radu-Stefan_1_obligatoriu_1.cpp tema_1/Besliu_Radu-Stefan_1_obligatoriu_2.cpp tema_1/Besliu_Radu-Stefan_1_obligatoriu_3.cpp tema_1/Besliu_Radu-Stefan_1_obligatoriu_4.cpp tema_1/Besliu_Radu-Stefan_1_obligatoriu_5.cpp tema_1/Besliu_Radu-Stefan_1_suplimentar_5.cpp tema_1/Besliu_Radu-Stefan_1_suplimentar_1.cpp)
add_executable(main.cpp tema_1/main.cpp)
add_executable(lab3.cpp lab_3/lab3.cpp)
add_executable(tema_3.cpp tema_3/tema_3.cpp)
